# NCTUMachineLearning

./: .gitignore
HW01-LinearRegression/: CMakeLists.txt  README.md
HW01-LinearRegression/include/: DynamicMatrix.hxx  IO.hxx  LinearRegression.hxx  MatrixBase.hxx  MatrixExceptions.hxx  StaticLinAlgCommon.hxx  StaticMatrix.hxx
HW01-LinearRegression/src/: DynamicMatrix.tcc  LinearRegression.tcc  MatrixBase.tcc  StaticLinAlgCommon.tcc  StaticMatrix.tcc  main.cpp  test.cpp  test2.cpp  test3.cpp  test4.cpp
HW01-LinearRegression/test/: CMakeLists.txt  TestDynamicMatrix.cc  TestDynamicMatrixOperators.cc  TestLinearRegression.cc  TestStaticLinAlgCommon.cc  TestStaticMatrix.cc  TestStaticMatrixOperators.cc
HW02-NaiveBayesClassifier/: download_mnist.sh
HW02-NaiveBayesClassifier/src/: beta_binomial_conjugation.py  naive_bayes_classifier.py  utils.py
HW03-BayesianLinearRegression/: linearmodel_rng.py  sequential_estimator.py  univariate_rng.py
HW03-BayesianLinearRegression/src/: bayesian_linreg.py
HW04-LogisticRegressionEMAlgorithm/: datasets.py  expectation_maximization.py
HW04-LogisticRegressionEMAlgorithm/src/: em_algorithm.py
HW05-Clustering/src/: KMean.py  KernelKMean.py  SVM.py  tests.py
HW06-DataVisualization/: GraphClust_viz.py  KMean.py  svm_viz.py  utils.py
HW06-DataVisualization/src/: LDA.py  PCA.py  graph_clustering.py
HW07-tSNE/src/: PCA.py  SymmetricSNE.py  tSNE.py  utils.py
